--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -1,13 +1,14 @@
-\documentclass[12pt]{article} %,fleqn
+\documentclass[12pt,a4paper]{article} %,fleqn
 \usepackage{Diplo}
+\usepackage[utf8]{inputenc} 
+\usepackage[russian]{babel}
 
 \usepackage[left=3cm,right=1.5cm,
 top=2cm,bottom=2cm]{geometry}
 
 \usepackage{comment}
 \usepackage{hyperref}
-\usepackage{cite}
-\usepackage{natbib}
+\usepackage[square, comma, sort&compress, numbers]{natbib}
 \newtheorem{definition}{Определение}
 \newtheorem{theorem}{Теорема}
 \newtheorem{utv}{Утверждение}
@@ -58,8 +59,8 @@ top=2cm,bottom=2cm]{geometry}
 
 \newpage
 \begin{abstract}
-	{}
-	
+
+В данной работе рассматривается задача выделения века на изображении глаза как параметрической кривой. Исследованы предложенные ранее схемы решения этой проблемы, и на основе изученных материалов разработан подход по его выделению как параболы с помощью поиска максимума на множестве проекций. Предложен и реализован алгоритм, основанный на параболическом преобразовании и преобразовании Радона.	
 
 \end{abstract}
 
@@ -128,7 +129,7 @@ top=2cm,bottom=2cm]{geometry}
 \section{Постановка задачи}
 
 
-\subsection{Задача выделения века}
+\subsection{Задача выделения века}\label{task}
 В алгоритмах идентификации личности, использующих радужку, чаще всего начинают с опеределения границы радужка-склера \cite{Adam_1, Daugman, Matv} или нормализуют радужку (рис.~\ref{fig:glaz3}) \cite{Min}, а лишь только потом определяют границу века. Это приводит к необходимости выполнять большое количество дополнительных вычислений. Рассмотрим только те методы, в которых для детектирования века необходимо заранее определить не более чем положение зрачка или радужки.
 
 \begin{figure}[h]
@@ -175,7 +176,7 @@ top=2cm,bottom=2cm]{geometry}
 	
 	\centering
 	
-	\includegraphics[width=0.5\linewidth]{glaz8.jpg}
+	\includegraphics[width=0.33\linewidth]{glaz8.jpg}
 	
 	\caption{Веко~--- зеленая линия и аппроксимирующая парабола~--- красная}
 	
@@ -183,8 +184,27 @@ top=2cm,bottom=2cm]{geometry}
 	
 \end{figure}
 \newpage
-\subsection{Метрики оценки качества}
+\subsection{Альтернативная оценка качества}
 
+В качестве еще одного метода оценки полученного результата предлагается рассмотреть отклонение вершины параболы от эталона. В нашем случае ожидается, что это будет самая высокая точка кривой века (рис.~\ref{fig:glaz2}).
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.6\linewidth]{glaz2.jpg}
+	
+	\caption{Определение положения века: $V$ и $N$~--- точки, соответствующие положениям верхнего и нижнего век; $Z$~--- центр зрачка}
+	
+	\label{fig:glaz2}
+	
+\end{figure}
+
+Тогда анализируемая метрика примет вид:
+\begin{gather}\label{dist}
+dist = \sqrt{\frac{(y-y_0)^2}{y_0^2}+\frac{(x-x_0)^2}{x_0^2}},
+\end{gather}
+где $(x_0, y_0)$~--- экспертная разметка вершины, а $(x,y)$~--- экспериментальная.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
@@ -232,7 +252,7 @@ top=2cm,bottom=2cm]{geometry}
 	
 	\centering
 	
-	\includegraphics[width=0.6\linewidth]{glaz5.jpg}
+	\includegraphics[width=0.5\linewidth]{glaz5.jpg}
 	
 	\caption{Пример параболического контура века на изображении глаза}
 	
@@ -249,7 +269,7 @@ top=2cm,bottom=2cm]{geometry}
 	
 	\centering
 	
-	\includegraphics[width=0.7\linewidth]{prost_filt.jpg}
+	\includegraphics[width=0.5\linewidth]{prost_filt.jpg}
 	
 	\caption{Схема пространственной фильтрации}
 	
@@ -392,8 +412,6 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 	g_y = \frac{\partial f}{\partial y} = (z_3+2z_6+z_9)-(z_1+2z_4+z_7)
 \end{gather}
 
-\newpage
-
 Маски, используемые оператором Собеля, отображены на рис.~\ref{fig:grad_mask_sob}.
 
 \begin{figure}[h]
@@ -429,7 +447,7 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 \end{figure}
 
 Проблема использования такого перехода проявляется при попытке отобразить прямую близкую к вертикальной, так как ее угловой коэффициент $a$ стремится к бесконечности. Поэтому, чтобы обойти данную трудность прямую представляют с помощью нормали:
-\begin{gather}\label{norm}
+\begin{gather}\label{norm1}
 	x\cos{\Theta} + y\sin{\Theta} = \rho
 \end{gather}
 
@@ -450,16 +468,22 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 \end{figure}
 
 Осуществив преобразование Хафа, далее предлагается разбить пространство параметров $\rho \Theta$ на так называемые ячейки накопления, как показано на рис.~\ref{fig:norm}-в. Затем для каждой точки $(x_k, y_k)$ исходной плоскости перебираем возможные значения для параметра $\Theta$ и находим соотвествующее ему значение $\rho = x_k\cos{\Theta}+y_k\sin{\Theta}$. Если выбор значения $\Theta_p$ приводит к решению $\rho_q$, то увеличиваем значение ячейки $A(p,q)$ на 1. После выполнения этого алгоритма значение $A(p,q)=Q$ означает, что на исходной плоскости находится $Q$ точек лежащих на прямой $\rho_p = x_k\cos{\Theta_q}+y_k\sin{\Theta_q}$.
-Отсюда и находят прямые контура. Аналогичным образом можно применять преобразование Хафа к любой функции вида $g(v,c) = 0$, где $v$~--- это вектор координат, а $c$~--- вектор коэффициентов.
-Так любое коническое сечение, в частности парабола, может быть задано уравнением в полярных координатах:
-\begin{gather}\label{conic}
-	\rho = \frac{de}{1\pm e\cos{\Theta}}~~~\text{или}
-	\\
-	\rho = \frac{de}{1\pm e\sin{\Theta}},~~~~~~~
-\end{gather}
-где $e$~--- эксцентриситет и $d$~--- кратчайшее расстояние между фокусом и директрисой. Для конических сечений эксцентриситет имеет разные значения в зависимости от формы кривой. Так для элипса он лежит в диапазоне: $0<e<1$, для гиперболы~--- $e>1$, а для параболы $e = 1$, ее далее и рассмотрим.
+Отсюда и находят прямые контура. 
 
-Парабола может быть определена как геометрическое множество точек, равноудаленных от неподвижной точки, называемой фокусом и прямой, называемой директрисой(рис.~\ref{fig:hough_parab}). Эта парабола, описывается уравнением:
+Аналогичным образом можно применять преобразование Хафа к любой функции вида $g(v,c) = 0$, где $v$~--- это вектор координат, а $c$~--- вектор коэффициентов.
+Так, любое коническое сечение, в частности парабола, может быть задано уравнением в полярных координатах:
+
+\begin{gather}\label{conic}
+	\rho = \frac{de}{1\pm e\cos{\Theta}}
+\end{gather}
+
+или
+\begin{gather}\label{conic2}
+	\rho = \frac{de}{1\pm e\sin{\Theta}},
+\end{gather}
+где $e$~--- эксцентриситет и $d$~--- кратчайшее расстояние между фокусом и директрисой. Для конических сечений эксцентриситет имеет разные значения в зависимости от формы кривой. Для элипса он лежит в диапазоне: $0<e<1$, для гиперболы~--- $e>1$, а для параболы~--- $e = 1$, ее далее и рассмотрим.
+
+Парабола может быть определена как геометрическое множество точек, равноудаленных от неподвижной точки, называемой фокусом и прямой, называемой директрисой(рис.~\ref{fig:hough_parab}). Эта парабола описывается уравнением:
 \begin{gather}\label{parab_equ}
 	(y-y_0)^2 = 4a(x-x_0)
 \end{gather}
@@ -479,16 +503,16 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 	
 \end{figure}
 
-Коэффициенты можно вычислять\cite{Hough_Parab}: 
+Коэффициенты можно вычислить по формулам~\cite{Hough_Parab}: 
  \begin{gather}\label{parab_equ_3}
 	A=\frac{y_k(x_j-x_i)+y_j(x_i-x_k)+y_i(x_k-x_j)}{(y_i-y_j)(y_i-y_k)(y_j-y_k)},\\
 	B=\frac{y_k^2(x_j-x_i)+y_j^2(x_i-x_k)+y_i^2(x_k-x_j)}{(y_i-y_j)(y_i-y_k)(y_j-y_k)},\\
 	C= \frac{y_jy_k(y_j-y_k)x_i+y_ky_i(y_k-y_i)x_j+y_iy_j(y_i-y_j)x_k}{(y_i-y_j)(y_i-y_k)(y_j-y_k)}
 \end{gather}
 
-Таким образом перебрав все тройки точек, переходим в пространство коэффициентов, в котором аналогично пространству для прямых считаем значения в ячейках накопления, но уже в трехмерных.
+Таким образом, перебрав все тройки точек, переходим в пространство коэффициентов, в котором, аналогично пространству для прямых, считаем значения в ячейках накопления, но уже в трехмерных.
 
-Наконец, можно получить значения координат вершины и апертуры параболы могут быть вычислены:
+Наконец, можно получить значения координат вершины и апертуры параболы:
 \begin{gather}\label{parab_equ_4}
 	x_0 = -\frac{B}{2A},\\
 	y_0 = C-\frac{B^2}{4A},\\
@@ -503,14 +527,14 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 	Rf(s, \alpha) = \int_{-\infty}^{\infty}{f(x(z),y(z))} = \int_{-\infty}^{\infty}{f(s\cos{\alpha}+z\sin{\alpha}, s\sin{\alpha}-z\cos{\alpha})dz}
 \end{gather}
 
-Геометрический смысл этого преобразования~--- это интеграл от функции вдоль прямой, перпендекулярной вектору $\vec{n}=(\cos{\alpha}, \sin{\alpha})$ и проходящей на расстоянии $s$ от начала координат вдоль этого вектора (рис.~\ref{fig:Radon_transform}).
+Геометрический смысл этого преобразования~--- это интеграл от функции вдоль прямой, перпендикулярной вектору $\vec{n}=(\cos{\alpha}, \sin{\alpha})$ и проходящей на расстоянии $s$ от начала координат вдоль этого вектора (рис.~\ref{fig:Radon_transform}).
 \begin{figure}[h]
 	
 	\centering
 	
 	\includegraphics[width=0.5\linewidth]{Radon_transform.jpg}
 	
-	\caption{Параболическое преобразование изображения}
+	\caption{Преобразование Радона}
 	
 	\label{fig:Radon_transform}
 	
@@ -518,7 +542,7 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 
 \subsubsection{Интегро-дифференциальный оператор (IDO)}
 
-Оператор, предложенный в \cite{Daugman2}, а затем развитый в \cite{Daugman4, Daugman, Daugman3}, используется в первую очередь для детектирования объектов круглой формы: в оригинале зрачка и радужки. Но также его автором было предложено детектировать верхние и нижние веки путем настройки поиска контура с кругового на дугообразный~\cite{Daugman}.
+Оператор, предложенный в \cite{Daugman2}, а затем развитый в \cite{Daugman4, Daugman}, используется в первую очередь для детектирования объектов круглой формы: в оригинале зрачка и радужки. Но также его автором было предложено детектировать верхние и нижние веки путем настройки поиска контура с кругового на дугообразный~\cite{Daugman}.
 
 Интегро-дифференциальный оператор определяестя как:
 \begin{gather}\label{ido}
@@ -699,7 +723,7 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 		x' = x
 		\\
 		y' = y - bx
-	\end{cases},
+	\end{cases}
 \end{gather}
 
 Тогда, если прямая изначально имела вид $y=bx+c$, то после преобразования она примет вид $y = c$. Так как шум на изображении все равно присутсвует, далее нужно максимизировать просуммированное значение яркостей вдоль всех строк изображения. Полученный максимум ожидаем в положении последнего искомого коэффициента $c$. Пример преобразования наклона на рис.~\ref{fig:nakl}
@@ -721,8 +745,8 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 
 \newpage
 \section{Результаты работы алгоритма}
-
-
+\subsection{Пример полученных кривых}
+Пример параболических кривых, построенных с помощью описанного выше алгоритма, на рис.~\ref{fig:compare}.
 \begin{figure}[h]
 	
 	\centering
@@ -735,21 +759,71 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 	
 \end{figure}
 
+\subsection{Распределение ошибки}
+Распределение величины ошибки на всей базе изображений $lg4000$ (2864 изображения) на рис.~\ref{fig:gist}. 
 
+\begin{figure}[h]
+	\centering
+	
+	\includegraphics[width=0.67\linewidth]{gist.jpg}
+	\caption{Распределение величины ошибки на базе $lg4000$}
+	
+	\label{fig:gist}
+\end{figure}
+
+Средняя величина ошибки на всей выборке~---~$4,8\%$, медианная ошибка~---~$2,1\%$.
+
+
+\subsection{Сравнение результатов с другими методами}
+Также рассчитаем величину ошибки $dist$~(\ref{dist} и ее распределение (рис.~\ref{fig:gist2}).
+
+\begin{figure}[h]
+	\centering
+	
+	\includegraphics[width=0.67\linewidth]{gist2.jpg}
+	\caption{Распределение величины ошибки $dist$ на базе $lg4000$}
+	
+	\label{fig:gist2}
+\end{figure}
+
+Средняя величина ошибки $dist$ на всей базе изображений~---~$12,2\%$, медианная ошибка~---~$5,8\%$.
+
+Сравним результаты работы алгоритма с другими методами, упомянутыми в разделе~(\ref{task}).
+
+\begin{table}[h]
+	\centering
+	%\begin{tabular}{l|l|l|l}
+	\begin{tabular}{ccc}
+		\hline Модель & Ошибка,~\%  &   \\
+		\hline Пр. Хафа \cite{Wildes} & 19,4 &  \\
+		Ф. Собела + IDO \cite{KP} & 7,7 &   \\
+		Ф. Собела + пр. Хафа \cite{Adam_1} & 11,5 &  \\
+		Ф. Габора + IDO \cite{KKX} & 14,2 &   \\
+		\hline
+		\textbf{Исследуемая модель}&   \textbf{12,2}&     \\
+		\hline 
+	\end{tabular}
+
+	\caption{Сравнение точности определения крайней верхней точки верхнего века существующими современными алгоритмами с исследуемой моделью}
+	\label{Tab:1}
+\end{table}
+
+Нетрудно заметить, что даже эта оценка качества дает сопоставимый результат.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \newpage
 \section{Заключение}
 
+В работе предложен метод и разработан алгоритм выделения века как параболической кривой. Сравнение с разметкой эксперта показывает состоятельность подхода и хорошее качество получаемого результата. Аналогичные выводы можно сделать из сравнения результатов работы предложенного метода с существующими алгоритмами. Возможными направлениями развития могут быть: сужение потенциальной области поиска искомых параметров, уменьшение шума ресниц и оптимизация работы алгоритма для неожидаемых углов наклона изображения.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \newpage
 
-\bibliographystyle{plain}
+\bibliographystyle{gost71s}
 \bibliography{mylib}
-\nocite{Yang}
+\nocite{GV}
 
 \end{document}
