--- a/mylib.bib
+++ b/mylib.bib
@@ -1,216 +1,190 @@
 % Encoding: UTF-8
 
-@InCollection{Daugman,
-  author    = {John Daugman},
-  booktitle = {Handbook of Image and Video Processing},
-  publisher = {Elsevier},
-  title     = {How Iris Recognition Works},
-  year      = {2005},
-  pages     = {1251--1262},
-  doi       = {10.1016/b978-012119792-6/50133-9},
+@article{Daugman,
+	title={How iris recognition works},
+	author={J. Daugman},
+	journal={IEEE Trans. Circuits Syst. Video Techn.},
+	year={2004},
+	volume={14},
+	pages={21--30}
 }
 
-@Article{Daugman2,
-	author  = {Daugman J.},
-	journal = {(U.S. Patent), 29160},
-	title   = {Biometric personal identification system based on iris analysis},
-	year    = {1994},
-	doi     = {},
-}
 
-@Article{Daugman3,
-	author  = {Daugman J.},
+@article{Daugman2,
+	author  = {J. Daugman},
 	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
 	title   = {High confidence visual recognition of persons by a test of statistical independence},
-	year    = {2013},
-	doi     = {1, 1148 - 1161},
+	year={1993},
+	volume={15},
+	number={11},
+	pages={1148--1161}
 }
 
 @Article{Daugman4,
-  author    = {John Daugman},
-  journal   = {Pattern Recognition},
-  title     = {The importance of being random: statistical principles of iris recognition},
-  year      = {2003},
-  month     = {feb},
-  number    = {2},
-  pages     = {279--291},
-  volume    = {36},
-  doi       = {10.1016/s0031-3203(02)00030-4},
-  publisher = {Elsevier {BV}},
+
+	title={The importance of being random: statistical principles of iris recognition},
+	author={J. Daugman},
+	journal={Pattern Recognit.},
+	year={2003},
+	volume={36},
+	pages={279--291}
 }
 
 @Article{Adam_1,
-	author  = {Adam M., Rossant F., Amiel F., Mikovikova B., Ea T.},
+	author  = {M. Adam and F. Rossant and others},
 	journal = {Advanced Concepts for Intelligent Vision Systems Conference Proceedings},
 	title   = {Reliable eyelid localization for iris
 	identification},
 	year    = {2008},
-	doi     = {P. 1062–1070.},
+	pages = {1062--1070}
 }
 
 @Article{Matv,
-	author  = {Solomatin I., Matveev I.},
-	journal = {J. Machine Learning Data Anal},
-	title   = {Detecting visible areas of iris by qualifier of local textural features},
-	year    = {2016},
-	doi     = {Vol. 1. No. 14. P. 1919–1929.},
+	author  = {{Соломатин И.А.} and {Матвеев И.А.} and {Новик В.П.}},
+	journal = {Автоматика и телемеханика},
+	title   = {Определение видимой области радужки классификатором текстур с опорным множеством},
+	year    = {2018},
+	vol = {3},
+	pages = {127--143}
 }
 
-@InProceedings{Min,
-  author    = {Tae-Hong Min and Rae-Hong Park},
-  booktitle = {2008 15th {IEEE} International Conference on Image Processing},
-  title     = {Comparison of eyelid and eyelash detection algorithms for performance improvement of iris recognition},
+@Article{Min,
+  author    = {T. Min and R. Park},
+  journal   = {Conference (International) on Image Processings Proceedings},
+  title = {Comparison of eyelid and eyelash detection algorithms for performance
+  improvement of iris recognition},
   year      = {2008},
-  publisher = {{IEEE}},
-  doi       = {10.1109/icip.2008.4711740},
-  journal   = {Conference (International) on Image Processings Proceedings .},
+  pages = {257--260},
 }
 
 @Article{Wildes,
-  author    = {R.P. Wildes},
+  author    = {R. Wildes},
   journal   = {Proceedings of the {IEEE}},
   title     = {Iris recognition: an emerging biometric technology},
   year      = {1997},
   number    = {9},
   pages     = {1348--1363},
-  volume    = {85},
-  doi       = {10.1109/5.628669},
-  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume    = {85}
 }
 
-@InProceedings{KKX,
-  author    = {Xiangde Zhang and Qi Wang and Hegui Zhu and Cuili Yao and Longcheng Gao and Xianyan Liu},
-  booktitle = {2009 Chinese Control and Decision Conference},
+@Article{KKX,
+  author    = {Z. Xiangde and W. Qi and others},
+  journal = {Chinese Control and Decision Conference Proceedings},
   title     = {Noise detection of iris image based on texture analysis},
   year      = {2009},
-  month     = {jun},
-  publisher = {{IEEE}},
-  doi       = {10.1109/ccdc.2009.5192665},
+  pages = {2366--2370}
 }
 
 @Article{Masek,
-	author  = {Masek L.},
+	author  = {L. Masek},
 	journal = {Measurement},
 	title   = {Recognition of human iris patterns for biometric identification},
 	year    = {2003},
-	doi     = {Vol. 32. No. 8. P. 1502–1516.},
+	volume = {32},
+	number = {8},
+	pages = {1502--1516}
 }
 
 @Article{KP,
-  author    = {Byung Jun Kang and Kang Ryoung Park},
+  author    = {B. Kang and K. Park},
   journal   = {Pattern Recognition Letters},
   title     = {A robust eyelash detection based on iris focus assessment},
   year      = {2007},
-  month     = {oct},
   number    = {13},
   pages     = {1630--1639},
-  volume    = {28},
-  doi       = {10.1016/j.patrec.2007.04.004},
-  publisher = {Elsevier {BV}},
+  volume    = {28}
 }
 
 @Article{Adam_2,
-	author  = {Adam M., Rossant F., Amiel F., Mikovikova B., Ea T.},
+	author  = {M. Adam and F. Rossant and others},
 	journal = {Radioengineering},
 	title   = {Eyelid localization for iris identification},
 	year    = {2008},
-	doi     = {Vol. 17. No. 4. P. 82–85.},
+	volume={17},
+	number={4},
+	pages={82--85}
 }
 
 @Article{Yang,
-	author  = {Yang L., Wu T., Dong Y., Fei L.},
+	author  = {L. Yang and T. Wu and others},
 	journal = {Conference (International) on Computer Design and Applications Proceedings},
 	title   = {Eyelid localization using asymmetric canny operator},
 	year    = {2010},
-	doi     = {P. 533–535.},
+	pages     = {533--535}
 }
 
 @Article{Smirn,
-	author  = {Смирнов Д.А., Матвеев И.А.},
-	journal = {Труды ИСА РАН, Динамика неоднород-
-	ных систем.},
+	author  = {{Смирнов Д.А.} and {Матвеев И.А.}},
+	journal = {Труды ИСА РАН, Динамика неоднородных систем},
 	title   = {Определение границ век на изображении глаза методом активных контуров},
 	year    = {2006},
-	doi     = {N.25(2). с.200-207.},
+	volume = {25},  
+	pages = {200--207}
 }
 
 @Article{Medic,
-	author  = {Вельховер Е.С., Шульпина Н.Б., Алиева З.А., Ромашов Ф.Н.},
-	journal = {М.: Медицина,},
-	title   = {Иридодиагностика.},
-	year    = {1988.},
-	doi     = {240 с.},
+	author  = {{Вельховер Е.С.} and {Шульпина Н.Б.} and {Алиева З.А. и др.}},
+	journal = {М.: Медицина},
+	title   = {Иридодиагностика},
+	year    = {1988},
+	pages = {240}
 }
 
-@Article{Tech,
-	author  = {},
-	journal = {http://www.nist.gov/
-	itl/iad/ig/mbgc.cfm},
-	title   = {Multiple Biometric Grand Challenge (MBGC - 2007)},
-	year    = {},
-	doi     = {},
+@MISC{Tech,
+	title = {Multiple Biometric Grand Challenge // http://www.nist.gov/itl/iad/ig/mbgc.cfm},
+	year    = {2007}
 }
 
-@Article{Terr,
-	author  = {},
-	journal = {http://www.nist.gov/
-	itl/iad/ig/mbe.cfm},
-	title   = {Multiple Biometric Evaluation (MBE2009)},
-	year    = {},
-	doi     = {},
+@MISC{Terr,
+	title = {Multiple Biometric Evaluation // http://www.nist.gov/itl/iad/ig/mbe.cfm},
+	year    = {2009}
 }
 
-@Article{Conf3,
-	author  = {},
-	journal = {NIST
-	Information Access Division: Multiple Biometric Grand Challenge. February
-	2010. // http://face.nist.gov.},
-	title   = {Future Challenges based on the Multiple Biometric Grand Challenge},
-	year    = {},
-	doi     = {},
+@MISC{Conf3,
+	title = {Future Challenges based on the Multiple Biometric Grand Challenge // {NIST}
+	Information Access Division: Multiple Biometric Grand Challenge},
+	year    = {2010}
 }
 
 @Article{Canny,
-  author     = {Canny, J},
+  author     = {J. Canny},
   journal    = {IEEE Trans. Pattern Anal. Mach. Intell.},
   title      = {A Computational Approach to Edge Detection},
   year       = {1986},
-  issn       = {0162-8828},
-  month      = jun,
   number     = {6},
-  pages      = {679–698},
+  pages      = {679--698},
   volume     = {8},
-  address    = {USA},
-  doi        = {10.1109/TPAMI.1986.4767851},
-  issue_date = {June 1986},
-  keywords   = {Edge detection, feature extraction, image processing, multiscale image analysis, machine vision},
-  numpages   = {20},
-  publisher  = {IEEE Computer Society},
-  url        = {https://doi.org/10.1109/TPAMI.1986.4767851},
 }
 
 @Article{Inter,
-  author  = {Дьяконов В. П.},
+  author  = {{Дьяконов В.П.}},
   journal = {М.: Наука},
   title   = {Справочник по алгоритмам и программам на языке бейсик для персональных ЭВМ},
-  year    = {1987},
-  doi     = {С. 240. ББК 22.18 Д93 УДК 519.6(083)},
+  year    = {1987}
 }
 
 @Article{Radon,
-	author  = {Deans, Stanley R.},
+	author  = {S. Deans},
 	journal = {New York: John Wiley and Sons},
-	title   = {The Radon Transform and Some of Its Applications.},
-	year    = {1983},
-	doi     = {},
+	title   = {The Radon Transform and Some of Its Applications},
+	year    = {1983}
 }
 
 @Article{Hough_Parab,
-	author  = {D. H. Ballard},
+	author  = {D. Ballard},
 	journal = {Pattern Recognition},
 	title   = {Generalizing the Hough transform to detect arbitrary shapes},
 	year    = {1981},
-	doi     = {vol. 13, no. 2, pp. 111–122},
+	volume = {13},
+	number = {2},
+	pages = {111--122}
+}
+
+@Article{GV,
+	author  = {{Гонсалес Р.} and {Вудс Р.}},
+	journal = {Техносфера},
+	title   = {Цифровая обработка изображений},
+	year    = {2012}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
